Integrate Gameplay Ability System (GAS) into combat variant
- Add GAS components to CombatEnemy and CombatCharacter classes
- Create CombatPlayerState with AbilitySystemComponent and AttributeSet
- Implement CombatAttributeSet with Health, MaxHealth, Damage, KnockbackImpulse, and LaunchImpulse attributes
- Update damage and health management to use GAS attributes instead of manual variables
- Add attribute change delegates for UI synchronization
- Update CombatGameMode to use CombatPlayerState
- Enable GameplayAbilities plugin in project settings
- Reformat code to modern C++ style with consistent bracing
- Update project name to 'Optimized GAS Demo' and add copyright notice
- Optimize engine settings for ray tracing, skin cache, and rendering
- Configure default maps and game mode for combat variant
- Add .clang-format to disable include sorting
- Update collision profiles and target platform settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CB4CA50D45664693596E198A9D95B190
-ProjectName=Third Person Game Template
+ProjectName=Optimized GAS Demo
+CopyrightNotice="// Copyright Nguyen Minh Tam. All Rights Reserved."
