--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Variant_Combat/Lvl_Combat.Lvl_Combat
 EditorStartupMap=/Game/Variant_Combat/Lvl_Combat.Lvl_Combat
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Variant_Combat/Blueprints/BP_CombatGameMode.BP_CombatGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
