Refactor health management to use dedicated HealthComponent
- Add HealthComponent class following Lyra's pattern for managing health via GAS
- Update CombatEnemy and CombatCharacter to use HealthComponent instead of direct GAS attribute access
- Enable ModularGameplay plugin in uproject
- Update build dependencies and include paths
- Update .ignore file with additional directories

--- a/OptimizedGASDemo.uproject
+++ b/OptimizedGASDemo.uproject
@@ -22,6 +22,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "ModularGameplay",
+			"Enabled": true
+		},
+		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true,
 			"TargetAllowList": [
