Integrate Gameplay Ability System (GAS) into Combat Variant
- Refactored combat system to use Unreal Engine's Gameplay Ability System (GAS)
- Added new gameplay tags for abilities, events, and data in DefaultGameplayTags.ini
- Created new ability classes: CombatAttackTraceAbility, CombatChargedAttackAbility, CombatDeathAbility, CombatReceiveDamageAbility
- Implemented CombatAttributeSet for managing character attributes
- Added CombatDamageGameplayEffect for handling damage application
- Introduced data structures: AttackEventData, CombatAttributeTableRow, CombatPawnData
- Updated CombatCharacter and CombatEnemy to use GAS abilities instead of direct montage control
- Modified CombatPlayerState to include AbilitySystemComponent and AttributeSet
- Added various combat-related actors: CombatActivationVolume, CombatCheckpointVolume, CombatDamageableBox, CombatDummy, CombatLavaFloor
- Updated include paths to organize code into Gameplay subfolders (Attributes, Abilities, Effects, Data, Actors)
- Enhanced attack tracing with bone-specific damage sources
- Improved charged attack mechanics with event-driven logic

This commit represents a significant architectural change to leverage GAS for better modularity and extensibility of the combat system.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,8 +15,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Attack.Trace",DevComment="Attack Trace ability")
 +GameplayTagList=(Tag="Ability.Damage.Receive",DevComment="Receive damage ability")
 +GameplayTagList=(Tag="Ability.Death",DevComment="Death ability")
++GameplayTagList=(Tag="Ability.ChargedAttack",DevComment="Charged attack ability")
 +GameplayTagList=(Tag="Event.Attack.Start",DevComment="Event when attack starts")
 +GameplayTagList=(Tag="Event.Damage.Received",DevComment="Event when damage is received")
 +GameplayTagList=(Tag="Event.Death",DevComment="Event when character dies")
++GameplayTagList=(Tag="Event.ChargedAttack.Loop",DevComment="Event to loop charged attack")
++GameplayTagList=(Tag="Event.ChargedAttack.Release",DevComment="Event to release charged attack")
 +GameplayTagList=(Tag="Data.Damage",DevComment="Damage data for effects")
 
