feat: Refactor combat system to use Gameplay Ability System (GAS)
- Reorganize gameplay tags into hierarchical structure (Ability.Type.*, Event.*, State.*, Data.*)
- Implement new GAS abilities: CombatComboAttackAbility, CombatNotifyEnemiesAbility, CombatTraceAttackAbility
- Refactor CombatCharacter and CombatEnemy to activate abilities instead of direct montage control
- Update CombatChargedAttackAbility, CombatDeathAbility, CombatReceiveDamageAbility with new tags and improved logic
- Add event-driven combo progression and charged attack mechanics
- Improve damage handling with gameplay effects and attribute-based parameters
- Add debug visualizations for attack traces and damage impacts
- Update includes and add new getter methods for montage and section access

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,15 +11,37 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability",DevComment="Base tag for abilities")
-+GameplayTagList=(Tag="Ability.Attack",DevComment="Ability to perform an attack")
-+GameplayTagList=(Tag="Ability.Attack.Trace",DevComment="Attack Trace ability")
-+GameplayTagList=(Tag="Ability.Damage.Receive",DevComment="Receive damage ability")
-+GameplayTagList=(Tag="Ability.Death",DevComment="Death ability")
-+GameplayTagList=(Tag="Ability.ChargedAttack",DevComment="Charged attack ability")
-+GameplayTagList=(Tag="Event.Attack.Start",DevComment="Event when attack starts")
++GameplayTagList=(Tag="Ability.Type",DevComment="Base tag for ability types")
++GameplayTagList=(Tag="Ability.Type.Attack",DevComment="Attack ability type")
++GameplayTagList=(Tag="Ability.Type.Attack.Combo",DevComment="Combo attack ability")
++GameplayTagList=(Tag="Ability.Type.Attack.Charged",DevComment="Charged attack ability")
++GameplayTagList=(Tag="Ability.Type.Damage",DevComment="Damage-related abilities")
++GameplayTagList=(Tag="Ability.Type.Damage.Receive",DevComment="Receive damage ability")
++GameplayTagList=(Tag="Ability.Type.Death",DevComment="Death ability")
++GameplayTagList=(Tag="Ability.Type.Notify",DevComment="Notification abilities")
++GameplayTagList=(Tag="Ability.Type.Notify.Enemies",DevComment="Notify enemies ability")
++GameplayTagList=(Tag="Ability.Type.Trace",DevComment="Trace ability")
++GameplayTagList=(Tag="Ability.Type.Trace.Attack",DevComment="Trace for attacking ability")
+
++GameplayTagList=(Tag="Event",DevComment="Base tag for events")
++GameplayTagList=(Tag="Event.Attack",DevComment="Attack-related events")
++GameplayTagList=(Tag="Event.Attack.Trace",DevComment="Event when attack traces")
++GameplayTagList=(Tag="Event.Attack.Combo",DevComment="Combo attack events")
++GameplayTagList=(Tag="Event.Attack.Combo.Next",DevComment="Event to advance combo attack")
++GameplayTagList=(Tag="Event.Attack.Charged",DevComment="Charged attack events")
++GameplayTagList=(Tag="Event.Attack.Charged.Loop",DevComment="Event to loop charged attack")
++GameplayTagList=(Tag="Event.Attack.Charged.Release",DevComment="Event to release charged attack")
++GameplayTagList=(Tag="Event.Damage",DevComment="Damage-related events")
 +GameplayTagList=(Tag="Event.Damage.Received",DevComment="Event when damage is received")
 +GameplayTagList=(Tag="Event.Death",DevComment="Event when character dies")
-+GameplayTagList=(Tag="Event.ChargedAttack.Loop",DevComment="Event to loop charged attack")
-+GameplayTagList=(Tag="Event.ChargedAttack.Release",DevComment="Event to release charged attack")
++GameplayTagList=(Tag="Event.Notify",DevComment="Notification events")
++GameplayTagList=(Tag="Event.Notify.Enemies",DevComment="Event to notify enemies")
+
++GameplayTagList=(Tag="State",DevComment="Base tag for states")
++GameplayTagList=(Tag="State.Dead",DevComment="Character is dead")
++GameplayTagList=(Tag="State.Attacking",DevComment="Character is attacking")
++GameplayTagList=(Tag="State.Charging",DevComment="Character is charging attack")
+
++GameplayTagList=(Tag="Data",DevComment="Base tag for data")
 +GameplayTagList=(Tag="Data.Damage",DevComment="Damage data for effects")
 
