Refactor combat system with ACombatBase and event-driven abilities
- Introduce ACombatBase as abstract base class for shared combat functionality between ACombatCharacter and ACombatEnemy
- Refactor inheritance: ACombatCharacter and ACombatEnemy now inherit from ACombatBase instead of ACharacter directly
- Implement event-driven ability activation using SendGameplayEvent instead of direct TryActivateAbilitiesByTag calls
- Update gameplay tags in DefaultGameplayTags.ini for better organization (Ability, Event, State, Data categories)
- Change 'Event.Attack.Trace' to 'Event.Trace.Attack' for consistency
- Move common GAS initialization, ability granting, and effect application to ACombatBase
- Simplify ACombatCharacter and ACombatEnemy by removing duplicated properties and methods
- Update ability classes (CombatChargedAttackAbility, CombatComboAttackAbility, etc.) to use ACombatBase and new event system
- Improve AI behavior in CombatChargedAttackAbility with randomized charge loops for enemies
- Add helper methods and forward declarations in various ability classes for better code organization

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,10 +25,12 @@ NetIndexFirstBitSegment=16
 
 +GameplayTagList=(Tag="Event",DevComment="Base tag for events")
 +GameplayTagList=(Tag="Event.Attack",DevComment="Attack-related events")
-+GameplayTagList=(Tag="Event.Attack.Trace",DevComment="Event when attack traces")
++GameplayTagList=(Tag="Event.Trace.Attack",DevComment="Event when attack traces")
 +GameplayTagList=(Tag="Event.Attack.Combo",DevComment="Combo attack events")
++GameplayTagList=(Tag="Event.Attack.Combo.Start",DevComment="Event to start combo attack")
 +GameplayTagList=(Tag="Event.Attack.Combo.Next",DevComment="Event to advance combo attack")
 +GameplayTagList=(Tag="Event.Attack.Charged",DevComment="Charged attack events")
++GameplayTagList=(Tag="Event.Attack.Charged.Start",DevComment="Event to start charged attack")
 +GameplayTagList=(Tag="Event.Attack.Charged.Loop",DevComment="Event to loop charged attack")
 +GameplayTagList=(Tag="Event.Attack.Charged.Release",DevComment="Event to release charged attack")
 +GameplayTagList=(Tag="Event.Damage",DevComment="Damage-related events")
