feat: Implement lock-on targeting system and enhance combat mechanics
- Add comprehensive lock-on system with CombatLockSystemComponent
  - Sphere trace-based target detection within configurable cone angle
  - Visual feedback with decal and debug visualization
  - Automatic camera locking and character rotation towards target
  - Target validation based on distance, angle, and lockable state

- Refactor health management with new CombatHealthComponent
  - GAS-integrated health system following Lyra patterns
  - Proper attribute change handling and death/revive logic
  - Improved health bar updates and component initialization

- Expand gameplay tags system in DefaultGameplayTags.ini
  - Reorganize event tags for better categorization
  - Add lock-related tags (Ability.Type.Lock.Toggle, State.Locked, State.Lockable)
  - Add damage and state tags (State.Damaged, Event.Damage.Received)
  - Add charged attack event tags (Event.Attack.Charged.Start/Release/Loop)
  - Add combo attack event tags (Event.Attack.Combo.Start/Next)

- Create new gameplay abilities
  - CombatLockToggleAbility: Handles lock/unlock functionality
  - CombatLockableAbility: Grants lockable state to enemies
  - Enhanced existing abilities with proper state tags

- Add new data structures
  - CombatAttackEventData: Stores attack-specific information
  - CombatDamageEventData: Stores damage event data
  - CombatComboEventData: Placeholder for combo data

- Update player controller
  - Add quit game functionality bound to Escape key
  - Improve code formatting and copyright attribution

- Update combat characters and enemies
  - Integrate lock system into CombatCharacter
  - Add lockable ability to CombatEnemy
  - Update input mappings for lock action

- Update input actions and mappings
  - Add IA_LockTarget input action
  - Update IMC_Combat with new input mappings

- Code quality improvements
  - Consistent copyright attribution to Nguyen Minh Tam
  - Better code formatting and organization
  - Impr

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,27 +22,27 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Type.Notify.Enemies",DevComment="Notify enemies ability")
 +GameplayTagList=(Tag="Ability.Type.Trace",DevComment="Trace ability")
 +GameplayTagList=(Tag="Ability.Type.Trace.Attack",DevComment="Trace for attacking ability")
++GameplayTagList=(Tag="Ability.Type.Lock.Toggle",DevComment="Lock toggle ability")
++GameplayTagList=(Tag="Ability.Type.Passive",DevComment="Passive abilities")
++GameplayTagList=(Tag="Ability.Type.Passive.lockable",DevComment="Lockable passive ability")
 
-+GameplayTagList=(Tag="Event",DevComment="Base tag for events")
-+GameplayTagList=(Tag="Event.Attack",DevComment="Attack-related events")
-+GameplayTagList=(Tag="Event.Trace.Attack",DevComment="Event when attack traces")
-+GameplayTagList=(Tag="Event.Attack.Combo",DevComment="Combo attack events")
-+GameplayTagList=(Tag="Event.Attack.Combo.Start",DevComment="Event to start combo attack")
-+GameplayTagList=(Tag="Event.Attack.Combo.Next",DevComment="Event to advance combo attack")
-+GameplayTagList=(Tag="Event.Attack.Charged",DevComment="Charged attack events")
-+GameplayTagList=(Tag="Event.Attack.Charged.Start",DevComment="Event to start charged attack")
-+GameplayTagList=(Tag="Event.Attack.Charged.Loop",DevComment="Event to loop charged attack")
-+GameplayTagList=(Tag="Event.Attack.Charged.Release",DevComment="Event to release charged attack")
-+GameplayTagList=(Tag="Event.Damage",DevComment="Damage-related events")
-+GameplayTagList=(Tag="Event.Damage.Received",DevComment="Event when damage is received")
-+GameplayTagList=(Tag="Event.Death",DevComment="Event when character dies")
-+GameplayTagList=(Tag="Event.Notify",DevComment="Notification events")
-+GameplayTagList=(Tag="Event.Notify.Enemies",DevComment="Event to notify enemies")
++GameplayTagList=(Tag="Event.Lock.Toggle",DevComment="Event to toggle lock on/off")
++GameplayTagList=(Tag="Event.Death",DevComment="Death event")
++GameplayTagList=(Tag="Event.Damage.Received",DevComment="Damage received event")
++GameplayTagList=(Tag="Event.Notify.Enemies",DevComment="Notify enemies event")
++GameplayTagList=(Tag="Event.Attack.Charged.Start",DevComment="Charged attack start event")
++GameplayTagList=(Tag="Event.Attack.Charged.Release",DevComment="Charged attack release event")
++GameplayTagList=(Tag="Event.Attack.Charged.Loop",DevComment="Charged attack loop event")
++GameplayTagList=(Tag="Event.Attack.Combo.Start",DevComment="Combo attack start event")
++GameplayTagList=(Tag="Event.Attack.Combo.Next",DevComment="Combo attack next event")
++GameplayTagList=(Tag="Event.Trace.Attack",DevComment="Trace attack event")
 
 +GameplayTagList=(Tag="State",DevComment="Base tag for states")
 +GameplayTagList=(Tag="State.Dead",DevComment="Character is dead")
++GameplayTagList=(Tag="State.Damaged",DevComment="Character is taking damage")
 +GameplayTagList=(Tag="State.Attacking",DevComment="Character is attacking")
-+GameplayTagList=(Tag="State.Charging",DevComment="Character is charging attack")
++GameplayTagList=(Tag="State.Locked",DevComment="Character has a locked target")
++GameplayTagList=(Tag="State.Lockable",DevComment="Character can be locked onto")
 
 +GameplayTagList=(Tag="Data",DevComment="Base tag for data")
 +GameplayTagList=(Tag="Data.Damage",DevComment="Damage data for effects")
