Refactor project configuration and documentation
- Update DefaultGame.ini with packaging settings for shipping builds
- Add Windows as target platform in uproject
- Overhaul README.md with professional structure and setup instructions
- Fix gameplay tag references in CombatLockSystemComponent and CombatReceiveDamageAbility
- Add comprehensive GAS overview and sequence diagrams in docs/
- Add new door frame mesh asset

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,14 @@
 ProjectID=CB4CA50D45664693596E198A9D95B190
 ProjectName=Optimized GAS Demo
 CopyrightNotice="// Copyright Nguyen Minh Tam. All Rights Reserved."
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+ForDistribution=True
+IncludeDebugFiles=False
+IncludePrerequisites=True
+UsePakFile=True
+bUseIoStore=True
+IncludeEditorOnlyData=False
+IncludeEngineContent=False
+BuildConfiguration=PPBC_Shipping
+
