feat: Implement comprehensive stamina system for combat mechanics
- Add UStaminaAttributeSet with Stamina, MaxStamina, and StaminaUsed attributes
- Implement UCombatStaminaRegenerationAbility with different behaviors for players (continuous regen) and enemies (reactive refill after depletion)
- Create stamina-related GameplayEffects: CombatStaminaCostGE, CombatStaminaUsedGE, CombatStaminaStunGE, CombatStaminaRegenerationGE, CombatStaminaUsedResetGE
- Integrate stamina costs into CombatComboAttackAbility and CombatChargedAttackAbility
- Scale attack damage based on stamina used (higher stamina cost = higher damage)
- Add stun mechanics when stamina is depleted (enemies get stunned and immobilized)
- Implement UMovementAttributeSet for movement-related attributes used in stun effects
- Enhance CombatLockToggleAbility with inlined lock logic and debug visualization
- Update CombatReceiveDamageAbility with consistent ASC retrieval
- Add stamina bar support to CombatLifeBar UI widget
- Increase default health values to 1000 for better balance
- Update documentation: GAS overview, sequence diagrams, and Lyra compliance roadmap
- Migrate from legacy GrantedAbilities/GrantedEffects arrays to AbilitySets pattern
- Add stun checks and stamina depletion handling in attack abilities
- Implement momentum preservation during attacks and enemy notification system

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,6 +25,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Type.Lock.Toggle",DevComment="Lock toggle ability")
 +GameplayTagList=(Tag="Ability.Type.Passive",DevComment="Passive abilities")
 +GameplayTagList=(Tag="Ability.Type.Passive.lockable",DevComment="Lockable passive ability")
++GameplayTagList=(Tag="Ability.Type.StaminaRegeneration",DevComment="Stamina regeneration ability")
 
 +GameplayTagList=(Tag="Event.Lock.Toggle",DevComment="Event to toggle lock on/off")
 +GameplayTagList=(Tag="Event.Death",DevComment="Death event")
@@ -41,9 +42,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Dead",DevComment="Character is dead")
 +GameplayTagList=(Tag="State.Damaged",DevComment="Character is taking damage")
 +GameplayTagList=(Tag="State.Attacking",DevComment="Character is attacking")
++GameplayTagList=(Tag="State.ChargingAttack",DevComment="Character is charging an attack")
 +GameplayTagList=(Tag="State.Locked",DevComment="Character has a locked target")
 +GameplayTagList=(Tag="State.Lockable",DevComment="Character can be locked onto")
++GameplayTagList=(Tag="State.StaminaRegenerating",DevComment="Character is regenerating stamina")
++GameplayTagList=(Tag="State.Stunned",DevComment="Character is stunned")
 
 +GameplayTagList=(Tag="Data",DevComment="Base tag for data")
 +GameplayTagList=(Tag="Data.Damage",DevComment="Damage data for effects")
-
++GameplayTagList=(Tag="Data.StaminaCost",DevComment="Stamina cost data for effects")
++GameplayTagList=(Tag="Data.StaminaRegenRate",DevComment="Stamina regeneration rate data for effects")
