Implement combat variant with GAS: Add abilities, attributes, effects, executions, pawn data, input configs, and documentation
- Added new ability sets for enemy, player, and shared combat abilities
- Implemented stamina and health attribute sets with regeneration mechanics
- Created combat abilities: charged attack, combo attack, lock toggle, trace attack, damage reception, stamina regeneration
- Added execution calculation for combat damage
- Updated pawn data and input configurations
- Enhanced AI and character classes for combat behavior
- Added lock system component for targeting
- Created new materials and blueprints
- Updated documentation with guides for abilities, input, pawn data, and setup
- Modified README and config files

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -49,6 +49,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Stunned",DevComment="Character is stunned")
 
 +GameplayTagList=(Tag="Data",DevComment="Base tag for data")
-+GameplayTagList=(Tag="Data.Damage",DevComment="Damage data for effects")
-+GameplayTagList=(Tag="Data.StaminaCost",DevComment="Stamina cost data for effects")
-+GameplayTagList=(Tag="Data.StaminaRegenRate",DevComment="Stamina regeneration rate data for effects")
++GameplayTagList=(Tag="Data.StaminaUsed",DevComment="Stamina used amount")
++GameplayTagList=(Tag="Data.StaminaCost",DevComment="Stamina cost amount")
++GameplayTagList=(Tag="Data.StaminaRegenRate",DevComment="Stamina regeneration rate")
++GameplayTagList=(Tag="Data.Health",DevComment="Health amount")
++GameplayTagList=(Tag="Data.Damage",DevComment="Damage amount")
